--- a/app_settings.json
+++ b/app_settings.json
@@ -29,14 +29,15 @@
     "rate_ms": 1000,
     "buffer_size": 100
   },
-  "last_updated": "2025-08-29T12:20:14.373285",
+  "last_updated": "2025-09-20T14:55:40.639719",
   "formulas": {
     "formulas": {
-      "aksu_index": {
-        "formula": "(2*ch1+ch2)/2",
-        "unit": "cal",
-        "created_at": "2025-08-22T17:09:07.934122",
-        "last_value": 0.24668802929732206
+      "prime_index": {
+        "formula": "ch1+ch2+ch3",
+        "unit": "ppm",
+        "created_at": "2025-09-20T13:23:04.320894",
+        "last_value": 0.0,
+        "selected": false
       }
     },
     "sensor_mapping": {
@@ -53,6 +54,9 @@
       "ir850": "IR_850nm",
       "ir940": "IR_940nm"
     },
-    "export_date": "2025-08-22T17:09:07.936377"
+    "export_date": "2025-09-20T13:23:04.321415"
+  },
+  "appearance": {
+    "theme": "light"
   }
 }
