--- a/app_settings.json
+++ b/app_settings.json
@@ -1,14 +1,14 @@
 {
   "led_names": {
-    "UV LED (360nm)": "led_1",
-    "Blue LED (450nm)": "led_2",
-    "IR LED (850nm)": "led_3",
-    "IR LED (940nm)": "led_4"
+    "UV LED (360nm)": "Prime1",
+    "Blue LED (450nm)": "Prime2",
+    "IR LED (850nm)": "Prime3",
+    "IR LED (940nm)": "Prime4"
   },
   "custom_data": {
     "selected_sensor": null,
     "multiplier": 1.0,
-    "unit": "V"
+    "unit": "mV"
   },
   "graph_settings": {
     "update_interval": 100,
@@ -17,7 +17,44 @@
     "auto_scale": true
   },
   "calibration": {
-    "functions": {},
+    "functions": {
+      "UV_360nm": {
+        "slope": -0.06880733944953797,
+        "intercept": 204.13302752293188,
+        "r_squared": 0.17201834862384957,
+        "molecule": "",
+        "unit": "Prime_İndex",
+        "calibration_points": 3,
+        "created_at": "2025-09-21T17:18:21.914061"
+      },
+      "Blue_450nm": {
+        "slope": 0.051114023591086834,
+        "intercept": 53.08781127129896,
+        "r_squared": 0.6644823066841401,
+        "molecule": "",
+        "unit": "Prime_İndex",
+        "calibration_points": 3,
+        "created_at": "2025-09-21T17:17:38.888740"
+      },
+      "IR_850nm": {
+        "slope": 0.6428571428572012,
+        "intercept": -1028.8571428572475,
+        "r_squared": 0.9642857142856981,
+        "molecule": "",
+        "unit": "Prime_İndex",
+        "calibration_points": 3,
+        "created_at": "2025-09-21T17:24:42.255773"
+      },
+      "IR_940nm": {
+        "slope": -0.09999999999998949,
+        "intercept": 344.4999999999769,
+        "r_squared": 0.25,
+        "molecule": "şeker",
+        "unit": "Prime_İndex",
+        "calibration_points": 3,
+        "created_at": "2025-09-21T17:39:14.308381"
+      }
+    },
     "last_calibration": {}
   },
   "connection": {
@@ -29,7 +66,7 @@
     "rate_ms": 1000,
     "buffer_size": 100
   },
-  "last_updated": "2025-09-20T14:55:40.639719",
+  "last_updated": "2025-09-21T17:57:09.153514",
   "formulas": {
     "formulas": {
       "prime_index": {
