--- a/app_settings.json
+++ b/app_settings.json
@@ -1,9 +1,9 @@
 {
   "led_names": {
-    "UV LED (360nm)": "Prime1",
-    "Blue LED (450nm)": "Prime2",
-    "IR LED (850nm)": "Prime3",
-    "IR LED (940nm)": "Prime4"
+    "UV LED (360nm)": "UV LED (360nm)",
+    "Blue LED (450nm)": "Blue LED (450nm)",
+    "IR LED (850nm)": "IR LED (940nm)",
+    "IR LED (940nm)": "IR LED (850nm)"
   },
   "custom_data": {
     "selected_sensor": null,
@@ -66,14 +66,14 @@
     "rate_ms": 1000,
     "buffer_size": 100
   },
-  "last_updated": "2025-09-30T19:43:10.744234",
+  "last_updated": "2025-10-02T18:43:41.749829",
   "formulas": {
     "formulas": {
       "prime_index": {
         "formula": "ch1+ch2+ch3",
         "unit": "ppm",
         "created_at": "2025-09-20T13:23:04.320894",
-        "last_value": 2112.0,
+        "last_value": 9757.0,
         "selected": false
       }
     },
